# qq-oidc-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py
