[tool.poetry]
name = "semgrep-server"
version = "0.1.0"
description = ""
authors = ["yoshino-s <cy-cui@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
